# test_IV

./: IV_data_read_and_schottky_template_.ipynb  IV_data_read_template.ipynb  LICENSE  README.md  pyproject.toml  python_setup.md  requirement.txt  schottky_simulation_template.ipynb
ivlib/: IV_reader.py  schottky.py
