# githubからpipでインストールする設定
# 
[project]
name = "ivlib"
version = "0.1"
description = "NIMS IV data treatment library includ read graph and schottky fit"
readme = "README.md"

requires-python = ">=3.10"
license = {file = "LICENSE"}

# dynamic = ["dependencies", "optional-dependencies"]

dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# optional-dependencies = {dev = { file = ["requirements-dev.txt"] }}

# dependencies =  [
#    "numpy",
#    "scipy",
# ]